# Git_commit_Multi_agent

./: .gitignore  INDEX.md  MANIFEST.in  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  TROUBLESHOOTING.md  USAGE.md  __init__.py  example.py  llm_client.py  pipeline.py  pyproject.toml  setup.py  test_file.py
.history/: .env_20251126222552.example  .env_20251126225718  .env_20251126230700  .env_20251126235927  .env_20251127002933.example  .gitignore_20251126222553  API_REFERENCE_20251126222238.md  API_REFERENCE_20251126222554.md  CHANGELOG_20251127003108.md  CHANGELOG_20251127003155.md  CHANGELOG_20251127131912.md  GETTING_STARTED_20251126222011.md  GETTING_STARTED_20251126222554.md  GETTING_STARTED_20251127002728.md  GETTING_STARTED_20251127002827.md  GETTING_STARTED_20251127003155.md  GETTING_STARTED_20251127131815.md  GETTING_STARTED_20251127131850.md  INDEX_20251126222329.md  PROJECT_COMPLETE_20251126222143.md  PROJECT_STRUCTURE_20251126221926.md  PROJECT_SUMMARY_20251126222428.txt  README_20251126220949.md  README_20251126222552.md  README_20251127002418.md  README_20251127002427.md  README_20251127002445.md  README_20251127002459.md  README_20251127002514.md  README_20251127002608.md  README_20251127002624.md  README_20251127003155.md  README_20251127132224.md  README_20251127132850.md  README_20251127133831.md  SETUP_STATUS_20251126225958.md  SETUP_STATUS_20251126230012.md  TROUBLESHOOTING_20251126221715.md  USAGE_20251126221824.md  clean_emojis_20251127132336.py  (+33 more)
.history/agents/: __init___20251126222552.py  base_agent_20251126222552.py  (+13 more)
agents/: summary_agent.py
docs/: update_summary.txt
examples/: quickstart.py
scripts/: install-core.bat
src/: __init__.py  pipeline.py
tests/: __init__.py  demo_simple.py
(+14 files in other folders)
