[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "git-commit-agent"
version = "1.0.0"
description = "AI-powered Git commit message generator using Ollama and OpenChat"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mahmoud Mayaleh"}
]
keywords = ["git", "commit", "ai", "ollama", "llm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "GitPython>=3.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/mahmoudmayaleh/Git_commit_Multi_agent"
Documentation = "https://github.com/mahmoudmayaleh/Git_commit_Multi_agent#readme"
Repository = "https://github.com/mahmoudmayaleh/Git_commit_Multi_agent"
"Bug Tracker" = "https://github.com/mahmoudmayaleh/Git_commit_Multi_agent/issues"

[project.scripts]
git-commit-ai = "main:main"

[tool.setuptools]
packages = ["src", "src.agents"]

[tool.setuptools.package-data]
"*" = [".env.example"]
